--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     password: green502
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update #update #create 하면 서버 켰다킬때마다 자동으로 새로 만들어 줌
     show-sql: true
     properties:
       hibernate:
